--- a/discussions/W.1. Binomial Trees.ipynb
+++ b/discussions/W.1. Binomial Trees.ipynb
@@ -459,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 2,
    "id": "dfa7a7f5",
    "metadata": {},
    "outputs": [
@@ -521,7 +521,7 @@
        "1.5   96.1531   2.62"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -642,7 +642,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 3,
    "id": "90bc306c",
    "metadata": {},
    "outputs": [],
@@ -662,7 +662,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 4,
    "id": "6d9ff907",
    "metadata": {},
    "outputs": [
@@ -671,42 +671,42 @@
       "text/html": [
        "<style type=\"text/css\">\n",
        "</style>\n",
-       "<table id=\"T_71909\">\n",
+       "<table id=\"T_7f5cc\">\n",
        "  <thead>\n",
        "    <tr>\n",
        "      <th class=\"blank level0\" >&nbsp;</th>\n",
-       "      <th id=\"T_71909_level0_col0\" class=\"col_heading level0 col0\" >price</th>\n",
-       "      <th id=\"T_71909_level0_col1\" class=\"col_heading level0 col1\" >position</th>\n",
-       "      <th id=\"T_71909_level0_col2\" class=\"col_heading level0 col2\" >$ holding</th>\n",
+       "      <th id=\"T_7f5cc_level0_col0\" class=\"col_heading level0 col0\" >price</th>\n",
+       "      <th id=\"T_7f5cc_level0_col1\" class=\"col_heading level0 col1\" >position</th>\n",
+       "      <th id=\"T_7f5cc_level0_col2\" class=\"col_heading level0 col2\" >$ holding</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th id=\"T_71909_level0_row0\" class=\"row_heading level0 row0\" >1-period bond</th>\n",
-       "      <td id=\"T_71909_row0_col0\" class=\"data row0 col0\" >$99.1338</td>\n",
-       "      <td id=\"T_71909_row0_col1\" class=\"data row0 col1\" >$-0.8554</td>\n",
-       "      <td id=\"T_71909_row0_col2\" class=\"data row0 col2\" >$-84.8036</td>\n",
+       "      <th id=\"T_7f5cc_level0_row0\" class=\"row_heading level0 row0\" >1-period bond</th>\n",
+       "      <td id=\"T_7f5cc_row0_col0\" class=\"data row0 col0\" >$99.1338</td>\n",
+       "      <td id=\"T_7f5cc_row0_col1\" class=\"data row0 col1\" >$-0.8554</td>\n",
+       "      <td id=\"T_7f5cc_row0_col2\" class=\"data row0 col2\" >$-84.8036</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_71909_level0_row1\" class=\"row_heading level0 row1\" >2-period bond</th>\n",
-       "      <td id=\"T_71909_row1_col0\" class=\"data row1 col0\" >$97.8925</td>\n",
-       "      <td id=\"T_71909_row1_col1\" class=\"data row1 col1\" >$0.8701</td>\n",
-       "      <td id=\"T_71909_row1_col2\" class=\"data row1 col2\" >$85.1733</td>\n",
+       "      <th id=\"T_7f5cc_level0_row1\" class=\"row_heading level0 row1\" >2-period bond</th>\n",
+       "      <td id=\"T_7f5cc_row1_col0\" class=\"data row1 col0\" >$97.8925</td>\n",
+       "      <td id=\"T_7f5cc_row1_col1\" class=\"data row1 col1\" >$0.8701</td>\n",
+       "      <td id=\"T_7f5cc_row1_col2\" class=\"data row1 col2\" >$85.1733</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_71909_level0_row2\" class=\"row_heading level0 row2\" >net</th>\n",
-       "      <td id=\"T_71909_row2_col0\" class=\"data row2 col0\" >$nan</td>\n",
-       "      <td id=\"T_71909_row2_col1\" class=\"data row2 col1\" >$nan</td>\n",
-       "      <td id=\"T_71909_row2_col2\" class=\"data row2 col2\" >$0.3696</td>\n",
+       "      <th id=\"T_7f5cc_level0_row2\" class=\"row_heading level0 row2\" >net</th>\n",
+       "      <td id=\"T_7f5cc_row2_col0\" class=\"data row2 col0\" >$nan</td>\n",
+       "      <td id=\"T_7f5cc_row2_col1\" class=\"data row2 col1\" >$nan</td>\n",
+       "      <td id=\"T_7f5cc_row2_col2\" class=\"data row2 col2\" >$0.3696</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n"
       ],
       "text/plain": [
-       "<pandas.io.formats.style.Styler at 0x11c638c70>"
+       "<pandas.io.formats.style.Styler at 0x22f3759ec10>"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -740,7 +740,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 5,
    "id": "f328aa7e",
    "metadata": {},
    "outputs": [
@@ -749,48 +749,48 @@
       "text/html": [
        "<style type=\"text/css\">\n",
        "</style>\n",
-       "<table id=\"T_e3693\">\n",
+       "<table id=\"T_b2e06\">\n",
        "  <thead>\n",
        "    <tr>\n",
        "      <th class=\"blank level0\" >&nbsp;</th>\n",
-       "      <th id=\"T_e3693_level0_col0\" class=\"col_heading level0 col0\" >probability</th>\n",
-       "      <th id=\"T_e3693_level0_col1\" class=\"col_heading level0 col1\" >cashflows</th>\n",
-       "      <th id=\"T_e3693_level0_col2\" class=\"col_heading level0 col2\" >probability weighted cashflows</th>\n",
+       "      <th id=\"T_b2e06_level0_col0\" class=\"col_heading level0 col0\" >probability</th>\n",
+       "      <th id=\"T_b2e06_level0_col1\" class=\"col_heading level0 col1\" >cashflows</th>\n",
+       "      <th id=\"T_b2e06_level0_col2\" class=\"col_heading level0 col2\" >probability weighted cashflows</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th id=\"T_e3693_level0_row0\" class=\"row_heading level0 row0\" >up</th>\n",
-       "      <td id=\"T_e3693_row0_col0\" class=\"data row0 col0\" >64.49%</td>\n",
-       "      <td id=\"T_e3693_row0_col1\" class=\"data row0 col1\" >0.0000</td>\n",
-       "      <td id=\"T_e3693_row0_col2\" class=\"data row0 col2\" >0.0000</td>\n",
+       "      <th id=\"T_b2e06_level0_row0\" class=\"row_heading level0 row0\" >up</th>\n",
+       "      <td id=\"T_b2e06_row0_col0\" class=\"data row0 col0\" >64.49%</td>\n",
+       "      <td id=\"T_b2e06_row0_col1\" class=\"data row0 col1\" >0.0000</td>\n",
+       "      <td id=\"T_b2e06_row0_col2\" class=\"data row0 col2\" >0.0000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_e3693_level0_row1\" class=\"row_heading level0 row1\" >down</th>\n",
-       "      <td id=\"T_e3693_row1_col0\" class=\"data row1 col0\" >35.51%</td>\n",
-       "      <td id=\"T_e3693_row1_col1\" class=\"data row1 col1\" >1.0500</td>\n",
-       "      <td id=\"T_e3693_row1_col2\" class=\"data row1 col2\" >0.3729</td>\n",
+       "      <th id=\"T_b2e06_level0_row1\" class=\"row_heading level0 row1\" >down</th>\n",
+       "      <td id=\"T_b2e06_row1_col0\" class=\"data row1 col0\" >35.51%</td>\n",
+       "      <td id=\"T_b2e06_row1_col1\" class=\"data row1 col1\" >1.0500</td>\n",
+       "      <td id=\"T_b2e06_row1_col2\" class=\"data row1 col2\" >0.3729</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_e3693_level0_row2\" class=\"row_heading level0 row2\" >net</th>\n",
-       "      <td id=\"T_e3693_row2_col0\" class=\"data row2 col0\" >nan%</td>\n",
-       "      <td id=\"T_e3693_row2_col1\" class=\"data row2 col1\" >nan</td>\n",
-       "      <td id=\"T_e3693_row2_col2\" class=\"data row2 col2\" >0.3729</td>\n",
+       "      <th id=\"T_b2e06_level0_row2\" class=\"row_heading level0 row2\" >net</th>\n",
+       "      <td id=\"T_b2e06_row2_col0\" class=\"data row2 col0\" >nan%</td>\n",
+       "      <td id=\"T_b2e06_row2_col1\" class=\"data row2 col1\" >nan</td>\n",
+       "      <td id=\"T_b2e06_row2_col2\" class=\"data row2 col2\" >0.3729</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_e3693_level0_row3\" class=\"row_heading level0 row3\" >price</th>\n",
-       "      <td id=\"T_e3693_row3_col0\" class=\"data row3 col0\" >36.97%</td>\n",
-       "      <td id=\"T_e3693_row3_col1\" class=\"data row3 col1\" >0.3697</td>\n",
-       "      <td id=\"T_e3693_row3_col2\" class=\"data row3 col2\" >0.3697</td>\n",
+       "      <th id=\"T_b2e06_level0_row3\" class=\"row_heading level0 row3\" >price</th>\n",
+       "      <td id=\"T_b2e06_row3_col0\" class=\"data row3 col0\" >36.97%</td>\n",
+       "      <td id=\"T_b2e06_row3_col1\" class=\"data row3 col1\" >0.3697</td>\n",
+       "      <td id=\"T_b2e06_row3_col2\" class=\"data row3 col2\" >0.3697</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n"
       ],
       "text/plain": [
-       "<pandas.io.formats.style.Styler at 0x117e2bb80>"
+       "<pandas.io.formats.style.Styler at 0x22f376e8cd0>"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -939,10 +939,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "id": "61506f14",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'options'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_11420\\2201662377.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0msys\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[0msys\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0minsert\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'../cmds'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m \u001b[1;32mfrom\u001b[0m \u001b[0moptions\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[1;33m*\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'options'"
+     ]
+    }
+   ],
    "source": [
     "import sys\n",
     "sys.path.insert(0, '../cmds')\n",
@@ -959,7 +971,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "f29ddd36",
    "metadata": {},
    "outputs": [],
@@ -992,7 +1004,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "447e48c2",
    "metadata": {
     "scrolled": true
@@ -1059,7 +1071,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "3345c983",
    "metadata": {},
    "outputs": [
@@ -1092,7 +1104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "cf8ad0a9",
    "metadata": {},
    "outputs": [
@@ -1156,7 +1168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "4cebfb01",
    "metadata": {},
    "outputs": [
@@ -1186,7 +1198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "aafdacd7",
    "metadata": {},
    "outputs": [
@@ -1243,7 +1255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "0520b2b3",
    "metadata": {
     "scrolled": true
@@ -1324,7 +1336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "d1d68c71",
    "metadata": {
     "scrolled": true
@@ -1389,7 +1401,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
