--- a/homework/Homework 1.ipynb
+++ b/homework/Homework 1.ipynb
@@ -29,13 +29,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "id": "77c9623a",
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "import matplotlib as mpl \n",
+    "%matplotlib inline\n",
+    "plt.style.use('seaborn')\n",
+    "mpl.rcParams['font.family'] = 'serif'"
    ]
   },
   {
@@ -49,12 +54,12 @@
       "text/html": [
        "<style type=\"text/css\">\n",
        "</style>\n",
-       "<table id=\"T_aa9e7\">\n",
+       "<table id=\"T_de5aa\">\n",
        "  <thead>\n",
        "    <tr>\n",
        "      <th class=\"index_name level0\" >time $t$</th>\n",
-       "      <th id=\"T_aa9e7_level0_col0\" class=\"col_heading level0 col0\" >0</th>\n",
-       "      <th id=\"T_aa9e7_level0_col1\" class=\"col_heading level0 col1\" >0.5</th>\n",
+       "      <th id=\"T_de5aa_level0_col0\" class=\"col_heading level0 col0\" >0</th>\n",
+       "      <th id=\"T_de5aa_level0_col1\" class=\"col_heading level0 col1\" >0.5</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th class=\"index_name level0\" >node</th>\n",
@@ -64,20 +69,20 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th id=\"T_aa9e7_level0_row0\" class=\"row_heading level0 row0\" >0</th>\n",
-       "      <td id=\"T_aa9e7_row0_col0\" class=\"data row0 col0\" >1.74%</td>\n",
-       "      <td id=\"T_aa9e7_row0_col1\" class=\"data row0 col1\" >3.39%</td>\n",
+       "      <th id=\"T_de5aa_level0_row0\" class=\"row_heading level0 row0\" >0</th>\n",
+       "      <td id=\"T_de5aa_row0_col0\" class=\"data row0 col0\" >1.74%</td>\n",
+       "      <td id=\"T_de5aa_row0_col1\" class=\"data row0 col1\" >3.39%</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_aa9e7_level0_row1\" class=\"row_heading level0 row1\" >1</th>\n",
-       "      <td id=\"T_aa9e7_row1_col0\" class=\"data row1 col0\" ></td>\n",
-       "      <td id=\"T_aa9e7_row1_col1\" class=\"data row1 col1\" >0.95%</td>\n",
+       "      <th id=\"T_de5aa_level0_row1\" class=\"row_heading level0 row1\" >1</th>\n",
+       "      <td id=\"T_de5aa_row1_col0\" class=\"data row1 col0\" ></td>\n",
+       "      <td id=\"T_de5aa_row1_col1\" class=\"data row1 col1\" >0.95%</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n"
       ],
       "text/plain": [
-       "<pandas.io.formats.style.Styler at 0x105618580>"
+       "<pandas.io.formats.style.Styler at 0x22847e359a0>"
       ]
      },
      "execution_count": 2,
@@ -111,12 +116,12 @@
       "text/html": [
        "<style type=\"text/css\">\n",
        "</style>\n",
-       "<table id=\"T_7d414\">\n",
+       "<table id=\"T_d956e\">\n",
        "  <thead>\n",
        "    <tr>\n",
        "      <th class=\"blank level0\" >&nbsp;</th>\n",
-       "      <th id=\"T_7d414_level0_col0\" class=\"col_heading level0 col0\" >price</th>\n",
-       "      <th id=\"T_7d414_level0_col1\" class=\"col_heading level0 col1\" >continuous ytm</th>\n",
+       "      <th id=\"T_d956e_level0_col0\" class=\"col_heading level0 col0\" >price</th>\n",
+       "      <th id=\"T_d956e_level0_col1\" class=\"col_heading level0 col1\" >continuous ytm</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th class=\"index_name level0\" >maturity</th>\n",
@@ -126,25 +131,25 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th id=\"T_7d414_level0_row0\" class=\"row_heading level0 row0\" >0.5</th>\n",
-       "      <td id=\"T_7d414_row0_col0\" class=\"data row0 col0\" >99.1338</td>\n",
-       "      <td id=\"T_7d414_row0_col1\" class=\"data row0 col1\" >1.74%</td>\n",
+       "      <th id=\"T_d956e_level0_row0\" class=\"row_heading level0 row0\" >0.5</th>\n",
+       "      <td id=\"T_d956e_row0_col0\" class=\"data row0 col0\" >99.1338</td>\n",
+       "      <td id=\"T_d956e_row0_col1\" class=\"data row0 col1\" >1.74%</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_7d414_level0_row1\" class=\"row_heading level0 row1\" >1.0</th>\n",
-       "      <td id=\"T_7d414_row1_col0\" class=\"data row1 col0\" >97.8925</td>\n",
-       "      <td id=\"T_7d414_row1_col1\" class=\"data row1 col1\" >2.13%</td>\n",
+       "      <th id=\"T_d956e_level0_row1\" class=\"row_heading level0 row1\" >1.0</th>\n",
+       "      <td id=\"T_d956e_row1_col0\" class=\"data row1 col0\" >97.8925</td>\n",
+       "      <td id=\"T_d956e_row1_col1\" class=\"data row1 col1\" >2.13%</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_7d414_level0_row2\" class=\"row_heading level0 row2\" >1.5</th>\n",
-       "      <td id=\"T_7d414_row2_col0\" class=\"data row2 col0\" >96.1462</td>\n",
-       "      <td id=\"T_7d414_row2_col1\" class=\"data row2 col1\" >2.62%</td>\n",
+       "      <th id=\"T_d956e_level0_row2\" class=\"row_heading level0 row2\" >1.5</th>\n",
+       "      <td id=\"T_d956e_row2_col0\" class=\"data row2 col0\" >96.1462</td>\n",
+       "      <td id=\"T_d956e_row2_col1\" class=\"data row2 col1\" >2.62%</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n"
       ],
       "text/plain": [
-       "<pandas.io.formats.style.Styler at 0x10f9c0a30>"
+       "<pandas.io.formats.style.Styler at 0x2284bbe7550>"
       ]
      },
      "execution_count": 3,
@@ -158,6 +163,14 @@
     "term_struct.set_index('maturity',inplace=True)\n",
     "term_struct.style.format({'price':'{:.4f}','continuous ytm':'{:.2%}'}).format_index('{:.1f}')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dc8ab3db",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -382,7 +395,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
