--- a/homework/Homework 1.ipynb
+++ b/homework/Homework 1.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "13234336",
    "metadata": {},
@@ -12,7 +13,19 @@
     "### UChicago Financial Mathematics\n",
     "\n",
     "* Mark Hendricks\n",
-    "* hendricks@uchicago.edu"
+    "* hendricks@uchicago.edu\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "2cd7a5fc",
+   "metadata": {},
+   "source": [
+    "**Students:** Danny Stein, Joseph Padilla"
    ]
   },
   {
