--- a/discussions/W.2. Forward Volatility.ipynb
+++ b/discussions/W.2. Forward Volatility.ipynb
@@ -119,6 +119,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "5786f5f1",
    "metadata": {},
@@ -139,7 +140,8 @@
     "2. Uncover $\\fwdvol$ for $i=1$ by noting it equals the flat vol.\n",
     "3. For $i=2$, use the $\\fwdvol$ for $i=1$ and $\\flatvol$ for $i=1$ to uncover $\\fwdvol$ for $i=2$.\n",
     "\n",
-    "This is also referred to as *stripping* the forward volatilities."
+    "This is also referred to as *stripping* the forward volatilities.\n",
+    "- Read for later"
    ]
   },
   {
