--- a/homework/Solution 1.ipynb
+++ b/homework/Solution 1.ipynb
@@ -7803,6 +7803,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "eff67f0e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hello"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "fa10b9df",
    "metadata": {},
