--- a/discussions/W.3. Bond Futures.ipynb
+++ b/discussions/W.3. Bond Futures.ipynb
@@ -118,6 +118,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "3a8b4b54",
    "metadata": {},
@@ -131,8 +132,8 @@
     "* first coupon 2023-08-31\n",
     "\n",
     "Now consider pricing a forward in the following environment...\n",
-    "* $t=$2023-04-18\n",
-    "* forward maturity $T=$2023-08-01\n",
+    "* $t$=$2023-04-18$\n",
+    "* forward maturity $T$=$2023-08-01$\n",
     "* spot price $P_t = 102-02$\n",
     "* repo rate is $.0485$"
    ]
@@ -170,7 +171,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
+   "id": "b1bc2ca6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "49"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "days_accint0\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "cdf9d313",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "105"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "I = 4*np.exp(days_cpn)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "88a44e86",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "102.39381616854789"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fwd1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "id": "0b93d6b0",
    "metadata": {},
    "outputs": [
@@ -179,38 +243,38 @@
       "text/html": [
        "<style type=\"text/css\">\n",
        "</style>\n",
-       "<table id=\"T_b427e\">\n",
+       "<table id=\"T_88de4\">\n",
        "  <thead>\n",
        "    <tr>\n",
        "      <th class=\"blank level0\" >&nbsp;</th>\n",
-       "      <th id=\"T_b427e_level0_col0\" class=\"col_heading level0 col0\" >prices</th>\n",
-       "      <th id=\"T_b427e_level0_col1\" class=\"col_heading level0 col1\" >carry</th>\n",
+       "      <th id=\"T_88de4_level0_col0\" class=\"col_heading level0 col0\" >prices</th>\n",
+       "      <th id=\"T_88de4_level0_col1\" class=\"col_heading level0 col1\" >carry</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th id=\"T_b427e_level0_row0\" class=\"row_heading level0 row0\" >spot</th>\n",
-       "      <td id=\"T_b427e_row0_col0\" class=\"data row0 col0\" >102.0625</td>\n",
-       "      <td id=\"T_b427e_row0_col1\" class=\"data row0 col1\" >4.0000</td>\n",
+       "      <th id=\"T_88de4_level0_row0\" class=\"row_heading level0 row0\" >spot</th>\n",
+       "      <td id=\"T_88de4_row0_col0\" class=\"data row0 col0\" >102.0625</td>\n",
+       "      <td id=\"T_88de4_row0_col1\" class=\"data row0 col1\" >4.0000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_b427e_level0_row1\" class=\"row_heading level0 row1\" >forward</th>\n",
-       "      <td id=\"T_b427e_row1_col0\" class=\"data row1 col0\" >102.3725</td>\n",
-       "      <td id=\"T_b427e_row1_col1\" class=\"data row1 col1\" >4.8500</td>\n",
+       "      <th id=\"T_88de4_level0_row1\" class=\"row_heading level0 row1\" >forward</th>\n",
+       "      <td id=\"T_88de4_row1_col0\" class=\"data row1 col0\" >102.3725</td>\n",
+       "      <td id=\"T_88de4_row1_col1\" class=\"data row1 col1\" >4.8500</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_b427e_level0_row2\" class=\"row_heading level0 row2\" >difference</th>\n",
-       "      <td id=\"T_b427e_row2_col0\" class=\"data row2 col0\" >-0.3100</td>\n",
-       "      <td id=\"T_b427e_row2_col1\" class=\"data row2 col1\" >-0.2733</td>\n",
+       "      <th id=\"T_88de4_level0_row2\" class=\"row_heading level0 row2\" >difference</th>\n",
+       "      <td id=\"T_88de4_row2_col0\" class=\"data row2 col0\" >-0.3100</td>\n",
+       "      <td id=\"T_88de4_row2_col1\" class=\"data row2 col1\" >-0.2733</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n"
       ],
       "text/plain": [
-       "<pandas.io.formats.style.Styler at 0x122cbae20>"
+       "<pandas.io.formats.style.Styler at 0x22b9a65a760>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -228,10 +292,32 @@
     "accint1 = cpn*face/2 * (days_accint1 / days_cpn)\n",
     "\n",
     "fwd = (spot + accint0) * (1+repo * days_fwd/360) - accint1\n",
+    "fwd1 = (spot+accint0 - accint1*np.exp(-repo*(days_accint1/360)))*np.exp(repo *days_fwd/360)\n",
     "\n",
     "fwd_spot = pd.DataFrame({'prices':[spot, fwd], 'carry':face*np.array([cpn,repo])}, index=['spot','forward'])\n",
     "fwd_spot.loc['difference'] = [spot-fwd, (accint1-accint0) - face*(repo * days_fwd/360)]\n",
     "fwd_spot.style.format('{:.4f}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "9a354e35",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.673913043478261"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "accint1"
    ]
   },
   {
@@ -652,7 +738,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
