--- a/discussions/W.3. Bond Futures.ipynb
+++ b/discussions/W.3. Bond Futures.ipynb
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "id": "b1bc2ca6",
    "metadata": {},
    "outputs": [
@@ -181,55 +181,34 @@
        "49"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "days_accint0\n"
+    "days_accint0"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "cdf9d313",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "105"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "I = 4*np.exp(days_cpn)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "id": "88a44e86",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "102.39381616854789"
+       "154"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "fwd1"
+    "days_accint1\n"
    ]
   },
   {
@@ -301,8 +280,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "9a354e35",
+   "execution_count": 13,
+   "id": "69004537",
    "metadata": {},
    "outputs": [
     {
@@ -311,13 +290,32 @@
        "1.673913043478261"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "9a354e35",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.532608695652174"
+      ]
+     },
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "accint1"
+    "accint0"
    ]
   },
   {
