--- a/homework/Homework 3.ipynb
+++ b/homework/Homework 3.ipynb
@@ -394,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "cf4bb5e4",
    "metadata": {},
    "outputs": [],
@@ -405,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "f3786005",
    "metadata": {},
    "outputs": [],
@@ -460,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "id": "ff4bcd7a",
    "metadata": {},
    "outputs": [
@@ -534,7 +534,7 @@
        "4     6.225625 -0.755734   6.981359"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -558,7 +558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "id": "931b0fe5",
    "metadata": {},
    "outputs": [],
@@ -581,7 +581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "id": "8e437154",
    "metadata": {},
    "outputs": [
@@ -655,7 +655,7 @@
        "91282CGT Govt           0.907522      0.9075"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -680,7 +680,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "id": "b15b9b4d",
    "metadata": {},
    "outputs": [],
@@ -694,7 +694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "id": "999c9b4e",
    "metadata": {},
    "outputs": [
@@ -709,7 +709,7 @@
        "Name: days_to_mty, dtype: float64"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -723,7 +723,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "id": "ddcc538b",
    "metadata": {},
    "outputs": [
@@ -769,7 +769,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "id": "953b17de",
    "metadata": {},
    "outputs": [],
@@ -779,7 +779,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "id": "7fe5b3e8",
    "metadata": {},
    "outputs": [
@@ -789,7 +789,7 @@
        "0.442308"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -800,7 +800,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
    "id": "d50195d7",
    "metadata": {},
    "outputs": [
@@ -881,7 +881,7 @@
        "0.096154  0.995236  0.201575  0.284977"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -892,7 +892,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 19,
    "id": "394d8ca9",
    "metadata": {},
    "outputs": [
@@ -1118,7 +1118,7 @@
        "[5 rows x 24 columns]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1131,7 +1131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 20,
    "id": "4a1476eb",
    "metadata": {},
    "outputs": [],
@@ -1144,7 +1144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 21,
    "id": "7d70cc53",
    "metadata": {},
    "outputs": [],
@@ -1156,7 +1156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 22,
    "id": "55151762",
    "metadata": {},
    "outputs": [
@@ -1179,10 +1179,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 23,
    "id": "d16deef2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "module 'Binomial_Fixed.binomial' has no attribute 'construct_accinttree'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_11172\\3509852009.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     10\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     11\u001b[0m     \u001b[0mbondtree\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mbinomial\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mbintree_pricing\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mpayoff\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mwrapper_function\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mratetree\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mratetree\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0miloc\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m:\u001b[0m\u001b[0mtime_steps\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m:\u001b[0m\u001b[0mtime_steps\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mcftree\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mcftree\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 12\u001b[1;33m     \u001b[0maccrued_int_tree\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mbinomial\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mconstruct_accinttree\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcftree\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mcftree\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mcompound\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mcompound\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mcpn\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mcpn\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     13\u001b[0m     \u001b[1;31m#dirty_tree = bondtree+accrued_int_tree\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     14\u001b[0m     \u001b[0mpx_dirty\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mloc\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mbond\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mbondtree\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0miloc\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mAttributeError\u001b[0m: module 'Binomial_Fixed.binomial' has no attribute 'construct_accinttree'"
+     ]
+    }
+   ],
    "source": [
     "for idx, bond in enumerate(bond_info.index):\n",
     "    time_steps = round(maturities[idx]/dt)\n",
@@ -1205,7 +1217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "id": "6ddc8fe7",
    "metadata": {},
    "outputs": [
@@ -1450,7 +1462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "id": "3ad89201",
    "metadata": {},
    "outputs": [
@@ -1476,7 +1488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "id": "ba84cc35",
    "metadata": {},
    "outputs": [],
@@ -1498,7 +1510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "id": "30932389",
    "metadata": {},
    "outputs": [],
@@ -1510,7 +1522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "id": "d606578a",
    "metadata": {},
    "outputs": [
@@ -1712,7 +1724,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "id": "958d571b",
    "metadata": {},
    "outputs": [
@@ -1733,7 +1745,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "id": "98a2ba7b",
    "metadata": {},
    "outputs": [
@@ -1755,7 +1767,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "id": "d691196f",
    "metadata": {},
    "outputs": [],
@@ -1765,7 +1777,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "id": "2240e66d",
    "metadata": {},
    "outputs": [
@@ -2007,7 +2019,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "id": "4c56c941",
    "metadata": {},
    "outputs": [
@@ -2250,7 +2262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "id": "c48e893e",
    "metadata": {},
    "outputs": [],
@@ -2271,7 +2283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "id": "05e74800",
    "metadata": {},
    "outputs": [
@@ -2393,7 +2405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "id": "fd98130d",
    "metadata": {},
    "outputs": [
@@ -2419,7 +2431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": null,
    "id": "6727a0ac",
    "metadata": {},
    "outputs": [
@@ -2668,7 +2680,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": null,
    "id": "8dacc846",
    "metadata": {},
    "outputs": [
@@ -2724,7 +2736,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": null,
    "id": "1af45a04",
    "metadata": {},
    "outputs": [
@@ -3003,7 +3015,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": null,
    "id": "24413a97",
    "metadata": {},
    "outputs": [
@@ -3245,7 +3257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": null,
    "id": "331bc6c4",
    "metadata": {},
    "outputs": [
@@ -3342,7 +3354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": null,
    "id": "eaaeed69",
    "metadata": {},
    "outputs": [
@@ -3430,7 +3442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": null,
    "id": "771d978f",
    "metadata": {},
    "outputs": [
@@ -3451,7 +3463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": null,
    "id": "517df301",
    "metadata": {},
    "outputs": [
@@ -3591,7 +3603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": null,
    "id": "781e3e03",
    "metadata": {},
    "outputs": [
@@ -3752,6 +3764,14 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7a177b9d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "id": "7aa00976",
    "metadata": {},
@@ -3769,7 +3789,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": null,
    "id": "e2ad70c4",
    "metadata": {},
    "outputs": [
@@ -3804,7 +3824,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": null,
    "id": "0bb61a1c",
    "metadata": {},
    "outputs": [
@@ -3838,7 +3858,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": null,
    "id": "5731c3f0",
    "metadata": {},
    "outputs": [
@@ -3898,14 +3918,6 @@
     "* These are both reasonable and will likely not differ much.\n",
     "* Here, use the simpler method #1--that is, for months with no meeting in the following month, the calculation is very simple."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5a2de956",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
