--- a/homework/homework_2_redo.ipynb
+++ b/homework/homework_2_redo.ipynb
@@ -533,6 +533,214 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "caps_us_fwd_vol = pd.DataFrame(dtype = float, index = cap_curves.index, columns=['CAP'])\n",
+    "for i in range(1,len(caps_us_fwd_vol)):\n",
+    "    price = 0\n",
+    "    for j in range(1,i+1):\n",
+    "        price += CAP_Floor(spot_rate=cap_curves.loc[j,'forwards'],strike_rate=cap_curves.loc[i,'swap rates'],volatility=cap_curves.loc[j,'Forward_Vol'],\\\n",
+    "            discount = cap_curves.loc[j,'discounts'],T = cap_curves.loc[j,'tenor']-.25, dt = .25, N =100, caplet = True)\n",
+    "    caps_us_fwd_vol.loc[i,'CAP']  = price\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>CAP</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.051758</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.170701</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.361537</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.630645</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        CAP\n",
+       "0       NaN\n",
+       "1  0.051758\n",
+       "2  0.170701\n",
+       "3  0.361537\n",
+       "4  0.630645"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "caps_us_fwd_vol.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>tenor</th>\n",
+       "      <th>swap rates</th>\n",
+       "      <th>discounts</th>\n",
+       "      <th>forwards</th>\n",
+       "      <th>flat vols</th>\n",
+       "      <th>CAP</th>\n",
+       "      <th>CAPLET</th>\n",
+       "      <th>Forward_Vol</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.25</td>\n",
+       "      <td>0.049149</td>\n",
+       "      <td>0.987862</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.50</td>\n",
+       "      <td>0.049097</td>\n",
+       "      <td>0.975896</td>\n",
+       "      <td>0.049045</td>\n",
+       "      <td>0.219491</td>\n",
+       "      <td>0.051758</td>\n",
+       "      <td>0.051758</td>\n",
+       "      <td>0.219491</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.75</td>\n",
+       "      <td>0.048306</td>\n",
+       "      <td>0.964628</td>\n",
+       "      <td>0.046724</td>\n",
+       "      <td>0.303075</td>\n",
+       "      <td>0.160980</td>\n",
+       "      <td>0.109222</td>\n",
+       "      <td>0.395405</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1.00</td>\n",
+       "      <td>0.047170</td>\n",
+       "      <td>0.954188</td>\n",
+       "      <td>0.043764</td>\n",
+       "      <td>0.369483</td>\n",
+       "      <td>0.324507</td>\n",
+       "      <td>0.163527</td>\n",
+       "      <td>0.543084</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1.25</td>\n",
+       "      <td>0.045246</td>\n",
+       "      <td>0.945312</td>\n",
+       "      <td>0.037559</td>\n",
+       "      <td>0.420688</td>\n",
+       "      <td>0.523376</td>\n",
+       "      <td>0.198868</td>\n",
+       "      <td>0.736688</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   tenor  swap rates  discounts  forwards  flat vols       CAP    CAPLET  \\\n",
+       "0   0.25    0.049149   0.987862       NaN        NaN       NaN       NaN   \n",
+       "1   0.50    0.049097   0.975896  0.049045   0.219491  0.051758  0.051758   \n",
+       "2   0.75    0.048306   0.964628  0.046724   0.303075  0.160980  0.109222   \n",
+       "3   1.00    0.047170   0.954188  0.043764   0.369483  0.324507  0.163527   \n",
+       "4   1.25    0.045246   0.945312  0.037559   0.420688  0.523376  0.198868   \n",
+       "\n",
+       "   Forward_Vol  \n",
+       "0          NaN  \n",
+       "1     0.219491  \n",
+       "2     0.395405  \n",
+       "3     0.543084  \n",
+       "4     0.736688  "
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cap_curves.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
    "outputs": [
