--- a/discussions/W.5. Volatility Modeling.ipynb
+++ b/discussions/W.5. Volatility Modeling.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "d0a4bc04",
    "metadata": {},
@@ -16,6 +17,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "f7802cec",
    "metadata": {},
@@ -28,6 +30,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "5a149d24",
    "metadata": {},
@@ -36,6 +39,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "d90d3c77",
    "metadata": {},
@@ -59,6 +63,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "2c767487",
    "metadata": {},
@@ -84,6 +89,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "3bc18d0a",
    "metadata": {},
@@ -100,6 +106,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "75c85d89",
    "metadata": {},
@@ -114,6 +121,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "9a30556d",
    "metadata": {},
@@ -130,6 +138,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "12536785",
    "metadata": {},
@@ -140,6 +149,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "f6539b73",
    "metadata": {},
@@ -148,6 +158,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "ee72003c",
    "metadata": {},
@@ -165,6 +176,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "b63821c5",
    "metadata": {},
@@ -184,6 +196,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "bf45cbcf",
    "metadata": {},
@@ -202,6 +215,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "3f4c5e85",
    "metadata": {},
@@ -224,6 +238,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "8ba10195",
    "metadata": {},
@@ -242,6 +257,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "9b431776",
    "metadata": {},
@@ -252,6 +268,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "d8389e19",
    "metadata": {},
@@ -266,6 +283,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "c4720b4b",
    "metadata": {},
@@ -284,6 +302,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "1f4282e9",
    "metadata": {},
@@ -305,6 +324,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "4f23334f",
    "metadata": {},
@@ -329,6 +349,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "191dfd94",
    "metadata": {},
