--- a/homework/Solution 1.ipynb
+++ b/homework/Solution 1.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "0cc2bd13",
    "metadata": {},
@@ -16,6 +17,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "9fd45132",
    "metadata": {},
@@ -100,6 +102,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "eb148925",
    "metadata": {},
@@ -110,6 +113,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "f3d11a73",
    "metadata": {},
@@ -179,6 +183,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "f976af2d",
    "metadata": {},
@@ -211,6 +216,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "1a465660",
    "metadata": {},
@@ -243,6 +249,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "6a27d2ea",
    "metadata": {},
@@ -255,6 +262,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "007baf32",
    "metadata": {},
@@ -274,6 +282,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "117e0380",
    "metadata": {},
@@ -339,6 +348,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "5ba272ab",
    "metadata": {},
@@ -398,6 +408,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "3e68e19f",
    "metadata": {},
@@ -419,6 +430,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "bcbe78f0",
    "metadata": {},
@@ -547,6 +559,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "b1990548",
    "metadata": {},
@@ -607,6 +620,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "c5d96b44",
    "metadata": {},
@@ -615,6 +629,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "c21e15b7",
    "metadata": {},
@@ -642,6 +657,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "adc17b19",
    "metadata": {},
@@ -650,6 +666,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "c88876d2",
    "metadata": {},
@@ -658,6 +675,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "daf972ff",
    "metadata": {},
@@ -678,6 +696,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "2dbbd488",
    "metadata": {},
@@ -730,6 +749,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "6a612af2",
    "metadata": {},
@@ -794,6 +814,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "2cd31a4f",
    "metadata": {},
@@ -856,6 +877,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "5faa4097",
    "metadata": {},
@@ -864,6 +886,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "59838e1f",
    "metadata": {},
@@ -925,6 +948,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "2eabc0da",
    "metadata": {},
@@ -933,6 +957,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "87504311",
    "metadata": {},
@@ -955,6 +980,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "7159b726",
    "metadata": {},
@@ -1120,6 +1146,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "8652dafd",
    "metadata": {},
@@ -1128,6 +1155,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "b48728be",
    "metadata": {},
@@ -1204,6 +1232,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "29f67824",
    "metadata": {},
@@ -1230,6 +1259,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "836077fd",
    "metadata": {},
@@ -1306,6 +1336,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "09198c5e",
    "metadata": {},
@@ -1379,6 +1410,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "f1fe2385",
    "metadata": {},
@@ -1470,6 +1502,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "bfd48383",
    "metadata": {},
@@ -1478,6 +1511,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "5dba264d",
    "metadata": {},
@@ -1501,6 +1535,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "70c15fec",
    "metadata": {},
@@ -1509,6 +1544,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "1e0b721b",
    "metadata": {},
@@ -7600,6 +7636,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "864be166",
    "metadata": {},
@@ -7803,16 +7840,7 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "eff67f0e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "hello"
-   ]
-  },
-  {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "fa10b9df",
    "metadata": {},
@@ -13862,6 +13890,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "7362db47",
    "metadata": {},
@@ -16772,6 +16801,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "0e848bc7",
    "metadata": {},
@@ -16786,6 +16816,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "d2407d29",
    "metadata": {},
