--- a/homework/hw1_redo.ipynb
+++ b/homework/hw1_redo.ipynb
@@ -2,72 +2,40 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "1523fa4e",
+   "execution_count": 130,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import datetime\n",
-    "import warnings\n",
-    "\n",
-    "from scipy.stats import norm\n",
-    "\n",
+    "import xbbg\n",
+    "import pdblp\n",
+    "from xbbg import blp\n",
+    "from Binomial_Fixed.ficcvol import *\n",
+    "import Binomial_Fixed\n",
+    "import quandl\n",
+    "apikey = 'J_fXGeVW_zC6RaDeJSQv'\n",
+    "quandl.ApiConfig.api_key = apikey\n",
+    "import datetime \n",
     "import matplotlib.pyplot as plt\n",
     "%matplotlib inline\n",
-    "plt.rcParams['figure.figsize'] = (12,6)\n",
-    "plt.rcParams['font.size'] = 15\n",
-    "plt.rcParams['legend.fontsize'] = 13\n",
-    "\n",
-    "from matplotlib.ticker import (MultipleLocator,\n",
-    "                               FormatStrFormatter,\n",
-    "                               AutoMinorLocator)\n",
-    "\n",
-    "import sys\n",
-    "sys.path.insert(0,'../cmds')\n",
-    "from options import *"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "id": "ce4d57e3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import quandl"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "id": "69685705",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "file_key = open(\"../../keys/quandl_key.txt\",\"r\")\n",
-    "API_KEY = file_key.read()\n",
-    "file_key.close()\n",
-    "\n",
-    "quandl.ApiConfig.api_key = API_KEY"
+    "import matplotlib as mpl\n",
+    "plt.style.use('seaborn')\n",
+    "mpl.rcParams['font.family'] = 'serif'\n",
+    "\n"
    ]
   },
   {
    "attachments": {},
    "cell_type": "markdown",
-   "id": "a4951197",
    "metadata": {},
    "source": [
-    "## Tickers\n",
-    "\n",
-    "https://data.nasdaq.com/data/OWF-optionworks-futures-options/documentation?anchor=coverage-data-organization"
+    "# Volatility Modeling"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "id": "5632cbce",
+   "execution_count": 106,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,8 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "id": "bae4a374",
+   "execution_count": 108,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,22 +87,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "id": "f8b035b3",
+   "execution_count": 117,
    "metadata": {},
    "outputs": [],
    "source": [
-    "with pd.ExcelWriter('../vol_surfaces.xlsx') as writer:  \n",
-    "    info.to_excel(writer, sheet_name= 'descriptions')\n",
-    "    for tick in TICKS:\n",
-    "        surfs[tick].to_excel(writer, sheet_name=labels[tick])"
+    "from scipy.optimize import fsolve\n",
+    "from scipy.optimize import minimize\n",
+    "\n",
+    "from pandas.tseries.offsets import Day, BDay\n",
+    "from datetime import date"
    ]
   }
  ],
  "metadata": {
-  "hide_input": false,
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -149,9 +115,10 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
-  }
+   "version": "3.9.13"
+  },
+  "orig_nbformat": 4
  },
  "nbformat": 4,
- "nbformat_minor": 5
+ "nbformat_minor": 2
 }
