--- a/discussions/W.3. Bond Futures.ipynb
+++ b/discussions/W.3. Bond Futures.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "0cc2bd13",
    "metadata": {},
@@ -16,6 +17,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "0dbef592",
    "metadata": {},
@@ -51,6 +53,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "7a0d74d6",
    "metadata": {},
@@ -59,6 +62,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "055d6e37",
    "metadata": {},
@@ -78,6 +82,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "b21ecf38",
    "metadata": {},
@@ -93,6 +98,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "06df431d",
    "metadata": {},
@@ -139,6 +145,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "a9a40ac7",
    "metadata": {},
@@ -279,46 +286,7 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 13,
-   "id": "69004537",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1.673913043478261"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "9a354e35",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.532608695652174"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "accint0"
-   ]
-  },
-  {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "320cd35f",
    "metadata": {},
@@ -327,6 +295,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "df93a4aa",
    "metadata": {},
@@ -350,6 +319,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "8e59f3c1",
    "metadata": {},
@@ -374,6 +344,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "51c08268",
    "metadata": {},
@@ -402,6 +373,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "2be43efb",
    "metadata": {},
@@ -410,6 +382,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "9d67fff8",
    "metadata": {},
@@ -418,6 +391,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "e07ed7b8",
    "metadata": {},
@@ -432,6 +406,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "bd89c36c",
    "metadata": {},
@@ -442,6 +417,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "530b4b8e",
    "metadata": {},
@@ -481,6 +457,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "632bbcd9",
    "metadata": {},
@@ -511,6 +488,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "e6839d0f",
    "metadata": {},
@@ -521,6 +499,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "cba8b308",
    "metadata": {},
@@ -540,6 +519,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "a6e9d55e",
    "metadata": {},
@@ -570,6 +550,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "4cd969be",
    "metadata": {},
@@ -596,6 +577,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "6138b8c6",
    "metadata": {},
@@ -620,6 +602,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "47185aa2",
    "metadata": {},
@@ -690,6 +673,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "0f33d874",
    "metadata": {},
