--- a/homework/Solution 3.ipynb
+++ b/homework/Solution 3.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "0cc2bd13",
    "metadata": {},
@@ -16,6 +17,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "6e2fb29f",
    "metadata": {},
@@ -24,6 +26,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "2a60e7f9",
    "metadata": {},
@@ -38,6 +41,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "b01d8235",
    "metadata": {},
@@ -57,6 +61,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "20310d6b",
    "metadata": {},
@@ -82,6 +87,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "96ceae98",
    "metadata": {},
@@ -94,6 +100,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "3721818a",
    "metadata": {},
@@ -108,6 +115,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "04f06940",
    "metadata": {},
@@ -122,6 +130,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "0c93fbf7",
    "metadata": {},
@@ -134,6 +143,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "3170cdff",
    "metadata": {},
@@ -159,6 +169,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "48e905cf",
    "metadata": {},
@@ -173,6 +184,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "83b740fa",
    "metadata": {},
@@ -190,6 +202,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "1a465660",
    "metadata": {},
@@ -243,6 +256,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "998256bc",
    "metadata": {},
@@ -278,6 +292,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "33c11654",
    "metadata": {},
@@ -300,6 +315,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "190eeef9",
    "metadata": {},
@@ -534,6 +550,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "a8ca6491",
    "metadata": {},
@@ -636,6 +653,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "5a33afd1",
    "metadata": {},
@@ -648,6 +666,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "186ff8c4",
    "metadata": {},
@@ -672,6 +691,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "94e534da",
    "metadata": {},
@@ -886,33 +906,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "id": "c00dd1d3",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "ticker\n",
-       "91282CFZ Govt    102.301425\n",
-       "91282CGC Govt    101.970304\n",
-       "91282CGH Govt     99.997799\n",
-       "91282CGP Govt    102.082201\n",
-       "91282CGT Govt    100.065830\n",
-       "dtype: float64"
-      ]
-     },
-     "execution_count": 31,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "pxdirty"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 8,
    "id": "6461b726",
    "metadata": {},
@@ -1011,6 +1004,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "260f43dc",
    "metadata": {},
@@ -1028,6 +1022,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "ac1c8607",
    "metadata": {},
@@ -1047,6 +1042,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "c8cadbbf",
    "metadata": {},
@@ -1478,6 +1474,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "3923b52c",
    "metadata": {},
@@ -1494,6 +1491,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "8b8d9e84",
    "metadata": {},
@@ -1594,6 +1592,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "51a7935e",
    "metadata": {},
@@ -1604,6 +1603,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "2b6729c1",
    "metadata": {},
@@ -1626,6 +1626,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "4d3b56bb",
    "metadata": {},
@@ -2371,6 +2372,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "03329e9d",
    "metadata": {},
@@ -2422,6 +2424,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "6a8c2af7",
    "metadata": {},
@@ -3225,6 +3228,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "833f7395",
    "metadata": {},
@@ -3477,6 +3481,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "75b4c554",
    "metadata": {},
@@ -3591,6 +3596,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "4ae6ede6",
    "metadata": {},
@@ -3663,6 +3669,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "dbcc1ee7",
    "metadata": {},
@@ -3748,6 +3755,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "f5d58778",
    "metadata": {},
@@ -3756,6 +3764,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "3a8feed2",
    "metadata": {},
@@ -3764,6 +3773,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "e02f9b2a",
    "metadata": {},
@@ -3778,6 +3788,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "7aa00976",
    "metadata": {},
@@ -3794,6 +3805,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "119aab7f",
    "metadata": {},
@@ -3817,6 +3829,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "e1683a39",
    "metadata": {},
@@ -3831,6 +3844,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "664df023",
    "metadata": {},
@@ -3854,6 +3868,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "02aa5077",
    "metadata": {},
@@ -3862,6 +3877,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "b7a4625d",
    "metadata": {},
@@ -3870,6 +3886,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "061edec4",
    "metadata": {},
@@ -3908,6 +3925,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "6dc3f0c6",
    "metadata": {},
@@ -4274,6 +4292,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "0f089cdf",
    "metadata": {},
@@ -4308,6 +4327,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "7d54aa50",
    "metadata": {},
